bug 1110510 - make sure to create and destroy proxies for documents r=surkov